; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_ossltest_err.c_ERR_OSSLTEST_error.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_ossltest_err.c_ERR_OSSLTEST_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lib_code = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*, i32)* @ERR_OSSLTEST_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ERR_OSSLTEST_error(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i64, i64* @lib_code, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %4
  %12 = call i64 (...) @ERR_get_next_error_library()
  store i64 %12, i64* @lib_code, align 8
  br label %13

13:                                               ; preds = %11, %4
  %14 = load i64, i64* @lib_code, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ERR_raise(i64 %14, i32 %15)
  %17 = load i8*, i8** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @ERR_set_debug(i8* %17, i32 %18, i32* null)
  ret void
}

declare dso_local i64 @ERR_get_next_error_library(...) #1

declare dso_local i32 @ERR_raise(i64, i32) #1

declare dso_local i32 @ERR_set_debug(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
